--- a/future.html
+++ b/future.html
@@ -1,14 +1,103 @@
+<!DOCTYPE html>
+<html lang="en">
 
-FUTURE PLANS
-Phase 1-Immediate requirement before Kumbabishekam
-    i. Two rooms –One room for Melsanthi stay  and one room towards Store room to keep temple items safely 
-    ii. 1 Office room with attached toiletToilet construction for Devotees with septic tank - Outside the temple
-    iii. Kumbabhishekam Expenses along with Annadhanam 
-AFTER KUMBABHISHEGAM-
-Phase 2-  Compound Wall and Outer elevation with GATES and outer area Landscaping
-Phase 3-  Parivaara Deivangal Sannadhis, Bali peedams and Kumbabhishegam- 
-a) Saptha Maathar b) Naagaraja & Naagarani c) Karupparasami d) Karuthasaami (e) Karuppayi amman
-Phase 4- Kodimaram and other related Pujai.
-Phase 5- Granite Flooring inside temple 
-Phase 6-Irumudi Mandapam with Annadhanam Hall and shops construction for rental income to temple.
-Request all the devotees to donate generously for the above works. Please contact temple office (or) below mentioned telephone numbers- 9884068292/ 9884076590/ 9884655547 for  donation.
+<head>
+    <title>Sri Baala Saastha Ayyappan</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/history.css" />
+    <link rel="icon" type="image/x-icon" href="./images/om.jpg" />
+</head>
+
+<body>
+    <div class="navigation">
+        <nav id="hamnav">
+            <span><img src="./images/aiyapan.jpg" alt="" style="height: 64px"> Sri Baala Saastha Ayyappan</img></span>
+            <br>
+            <!-- (B) THE HAMBURGER -->
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger" />
+
+            <!-- (C) MENU ITEMS -->
+            <div id="hamitems">
+                <a href="./index.html">HOME</a>
+                <a href="./history.html">HISTORY</a>
+                <a href="./pujas.html">PUJAS</a>
+                <a href="./trustees.html">TRUSTEES</a>
+                <a href="./future.html">FUTURE PLANS</a>
+                <a href="./book.html">BOOK A PUJA</a>
+                <a href="#">DONATE</a>
+            </div>
+        </nav>
+    </div>
+
+    <div class="body" style="min-height: 80vh; padding-top: 8%">
+
+        <h2>FUTURE PLANS</h2>
+        <ul>
+            <li>Phase 1-Immediate requirement before Kumbabishekam
+                <ol>
+                    <li>Two rooms –One room for Melsanthi stay and one room towards Store room to keep temple items
+                        safely </li>
+                    <li>1 Office room with attached toiletToilet construction for Devotees with septic tank - Outside
+                        the temple</li>
+                    <li>Kumbabhishekam Expenses along with Annadhanam</li>
+                </ol>
+            </li>
+            AFTER KUMBABHISHEGAM-
+            <li>Phase 2- Compound Wall and Outer elevation with GATES and outer area Landscaping</li>
+            <li>Phase 3- Parivaara Deivangal Sannadhis, Bali peedams and Kumbabhishegam-
+                <ul>
+                    <li>a) Saptha Maathar </li>
+                    <li>b) Naagaraja & Naagarani </li>
+                    <li>c) Karupparasami </li>
+                    <li>d) Karuthasaami </li>
+                    <li>e) Karuppayi amman</li>
+                </ul>
+            </li>
+            <li>Phase 4- Kodimaram and other related Pujai.</li>
+            <li>Phase 5- Granite Flooring inside temple </li>
+            <li>Phase 6-Irumudi Mandapam with Annadhanam Hall and shops construction for rental income to temple.</li>
+        </ul>
+        Request all the devotees to donate generously for the above works. Please contact temple office (or) below
+        mentioned telephone numbers- 9884068292/ 9884076590/ 9884655547 for donation.
+    </div>
+
+
+    <div class="footer-div">
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>TEMPLE ADDRESS</h4>
+                        <p>
+                            Sri Baala Saastha Ayyappan Temple Sai Srivari Nagar Singaperumal
+                            Koil Chingelput District Tamil Nadu
+                        </p>
+                    </div>
+
+                    <div class="footer-col">
+                        <h4>REGISTERED ADDRESS</h4>
+                        <p>
+                            RAJI, 3B1, 3rd Floor, Gaiety Palace, 1L Blackers Road, Mount
+                            Road Chennai-600001, 044-28528292 Email-sbspctrust@gmail.com
+                        </p>
+                    </div>
+
+                    <div class="footer-col">
+                        <h4>CONTACT US</h4>
+                        <ul>
+                            <li><a href="tel://04428528292">044-28528292</a></li>
+                            <li>
+                                <a href="mailto://sbspctrust@gmail.com">sbspctrust@gmail.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+</body>
+
+</html>
