--- a/history.html
+++ b/history.html
@@ -23,7 +23,7 @@
             <div id="hamitems">
                 <a href="./index.html">HOME</a>
                 <a href="./history.html">HISTORY</a>
-                <a href="#">PUJAS</a>
+                <a href="./pujas.html">PUJAS</a>
                 <a href="./trustees.html">TRUSTEES</a>
                 <a href="./future.html">FUTURE PLANS</a>
                 <a href="./book.html">BOOK A PUJA</a>
@@ -91,3 +91,4 @@
 </body>
 
 </html>
+
