--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="hamitems">
                 <a href="./index.html">HOME</a>
                 <a href="./history.html">HISTORY</a>
-                <a href="#">PUJAS</a>
+                <a href="./pujas.html">PUJAS</a>
                 <a href="./trustees.html">TRUSTEES</a>
                 <a href="./future.html">FUTURE PLANS</a>
                 <a href="./book.html">BOOK A PUJA</a>
@@ -34,22 +34,19 @@
     <div class="gallery">
         <div class="container">
                 <img src="./images/img1.jpeg" alt="" width="600" height="400">
-            <div class="desc">Add a description of the image here</div>
         </div>
 
         <div class="container">
                 <img src="./images/img5.jpeg" alt="" width="600" height="400">
-            <div class="desc">Add a description of the image here</div>
         </div>
 
         <div class="container">
                 <img src="./images/img3.jpeg" alt="" width="600" height="400">
-            <div class="desc">Add a description of the image here</div>
         </div>
 
         <div class="container">
                 <img src="./images/img4.jpeg" alt="" width="600" height="400">
-            <div class="desc">Add a description of the image here</div>
+                <!--<div class="desc">Add a description of the image here</div>-->
         </div>
     </div>
 
