--- a/trustees.html
+++ b/trustees.html
@@ -1,26 +1,117 @@
+<!DOCTYPE html>
+<html lang="en">
 
-TRUSTEES
-Name
-Occupation
-Photo
-Mr.C.K.Sargunavel
-Real Estate Professional
+<head>
+    <title>Sri Baala Saastha Ayyappan</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/history.css" />
+    <link rel="icon" type="image/x-icon" href="./images/om.jpg" />
+</head>
 
-Mr.C.Ramasubramaniam
-Company Secretary and Insolvency Professional
+<body>
+    <div class="navigation">
+        <nav id="hamnav">
+            <span><img src="./images/aiyapan.jpg" alt="" style="height: 64px"> Sri Baala Saastha Ayyappan</img></span>
+            <br>
+            <!-- (B) THE HAMBURGER -->
+            <label for="hamburger">&#9776;</label>
+            <input type="checkbox" id="hamburger" />
 
-Mr.A.Sivashankar
-Banker
+            <!-- (C) MENU ITEMS -->
+            <div id="hamitems">
+                <a href="./index.html">HOME</a>
+                <a href="./history.html">HISTORY</a>
+                <a href="./pujas.html">PUJAS</a>
+                <a href="./trustees.html">TRUSTEES</a>
+                <a href="./future.html">FUTURE PLANS</a>
+                <a href="./book.html">BOOK A PUJA</a>
+                <a href="#">DONATE</a>
+            </div>
+        </nav>
+    </div>
 
-Mr.Ramaswamy
-Business Consultant
+    <div class="body" style="min-height: 80vh; padding-top: 10%">
+        <table>
+            <tr>
+                <th>TRUSTEES</th>
+                <th>Name</th>
+                <th>Occupation</th>
+                <th>Photo</th>
+            </tr>
+            <tr>
+                <td>Mr.C.K.Sargunavel</td>
+                <td>Real Estate Professional</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mr.C.Ramasubramaniam</td>
+                <td>Company Secretary and Insolvency Professional</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mr.A.Sivashankar</td>
+                <td>Banker</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mr.Ramaswamy</td>
+                <td>Business Consultant</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mr.P.K.Hemanth Kumar</td>
+                <td>Event Management Professional</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mr.S.Sathyanarayanan</td>
+                <td>Builder and Promoter</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Mr. Lakshmi Kanth</td>
+                <td>Real Estate Professional</td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
 
-Mr.P.K.Hemanth Kumar
-Event Management Professional
 
-Mr.S.Sathyanarayanan
-Builder and Promoter
+    <div class="footer-div">
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>TEMPLE ADDRESS</h4>
+                        <p>
+                            Sri Baala Saastha Ayyappan Temple Sai Srivari Nagar Singaperumal
+                            Koil Chingelput District Tamil Nadu
+                        </p>
+                    </div>
 
-Mr. Lakshmi Kanth
-Real Estate Professional
+                    <div class="footer-col">
+                        <h4>REGISTERED ADDRESS</h4>
+                        <p>
+                            RAJI, 3B1, 3rd Floor, Gaiety Palace, 1L Blackers Road, Mount
+                            Road Chennai-600001, 044-28528292 Email-sbspctrust@gmail.com
+                        </p>
+                    </div>
 
+                    <div class="footer-col">
+                        <h4>CONTACT US</h4>
+                        <ul>
+                            <li><a href="tel://04428528292">044-28528292</a></li>
+                            <li>
+                                <a href="mailto://sbspctrust@gmail.com">sbspctrust@gmail.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+</body>
+
+</html>
