--- a/trustees.html
+++ b/trustees.html
@@ -33,9 +33,9 @@
     </div>
 
     <div class="body" style="min-height: 80vh; padding-top: 10%">
+        <h2>TRUSTEES</h2>
         <table>
             <tr>
-                <th>TRUSTEES</th>
                 <th>Name</th>
                 <th>Occupation</th>
                 <th>Photo</th>
