--- a/pujas.html
+++ b/pujas.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/index.css" rel="stylesheet" />
+    <link href="css/history.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="./images/om.jpg" />
 </head>
 
