--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             boy and showering his blessings to all the aasthega bakthaas. Arulmigu
             Kanni Moola Ganapathy and Arulmigu Maaligaipurathamman are showering
             their blessings here in the temple along with Sri Baala Saastha
-            Ayyappan. (Photos of temple and Baala Saastha)
+            Ayyappan.
         </p>
     </div>
 
@@ -89,8 +89,13 @@
                     <div class="footer-col">
                         <h4>REGISTERED ADDRESS</h4>
                         <p>
-                            RAJI, 3B1, 3rd Floor, Gaiety Palace, 1L Blackers Road, Mount
-                            Road Chennai-600001, 044-28528292 Email-sbspctrust@gmail.com
+                            RAJI, 3B1, 3rd Floor, 
+                            <br>
+                            Gaiety Palace, 
+                            <br>
+                            1L Blackers Road, 
+                            <br>
+                            Mount Road Chennai-600001
                         </p>
                     </div>
 
