--- a/pujas.html
+++ b/pujas.html
@@ -128,8 +128,13 @@
                     <div class="footer-col">
                         <h4>REGISTERED ADDRESS</h4>
                         <p>
-                            RAJI, 3B1, 3rd Floor, Gaiety Palace, 1L Blackers Road, Mount
-                            Road Chennai-600001, 044-28528292 Email-sbspctrust@gmail.com
+                            RAJI, 3B1, 3rd Floor, 
+                            <br>
+                            Gaiety Palace, 
+                            <br>
+                            1L Blackers Road, 
+                            <br>
+                            Mount Road Chennai-600001
                         </p>
                     </div>
 
