--- a/trustees.html
+++ b/trustees.html
@@ -38,42 +38,34 @@
             <tr>
                 <th>Name</th>
                 <th>Occupation</th>
-                <th>Photo</th>
             </tr>
             <tr>
                 <td>Mr.C.K.Sargunavel</td>
                 <td>Real Estate Professional</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Mr.C.Ramasubramaniam</td>
                 <td>Company Secretary and Insolvency Professional</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Mr.A.Sivashankar</td>
                 <td>Banker</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Mr.Ramaswamy</td>
                 <td>Business Consultant</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Mr.P.K.Hemanth Kumar</td>
                 <td>Event Management Professional</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Mr.S.Sathyanarayanan</td>
                 <td>Builder and Promoter</td>
-                <td></td>
             </tr>
             <tr>
                 <td>Mr. Lakshmi Kanth</td>
                 <td>Real Estate Professional</td>
-                <td></td>
             </tr>
         </table>
     </div>
@@ -94,8 +86,13 @@
                     <div class="footer-col">
                         <h4>REGISTERED ADDRESS</h4>
                         <p>
-                            RAJI, 3B1, 3rd Floor, Gaiety Palace, 1L Blackers Road, Mount
-                            Road Chennai-600001, 044-28528292 Email-sbspctrust@gmail.com
+                            RAJI, 3B1, 3rd Floor, 
+                            <br>
+                            Gaiety Palace, 
+                            <br>
+                            1L Blackers Road, 
+                            <br>
+                            Mount Road Chennai-600001
                         </p>
                     </div>
 
