--- a/index.html
+++ b/index.html
@@ -21,31 +21,52 @@
             <!-- (C) MENU ITEMS -->
             <div id="hamitems">
                 <a href="./index.html">HOME</a>
+                <a href="./gallery.html.html">HOME</a>
                 <a href="./history.html">HISTORY</a>
                 <a href="./pujas.html">PUJAS</a>
                 <a href="./trustees.html">TRUSTEES</a>
                 <a href="./future.html">FUTURE PLANS</a>
-                <a href="./book.html">BOOK A PUJA</a>
-                <a href="#">DONATE</a>
+                <a href="https://forms.gle/7DFkyyEzTKygKr8j9">BOOK A PUJA</a>
+                <a href="https://forms.gle/495EaCKUXH8NDcw56">DONATE</a>
             </div>
         </nav>
     </div>
 
     <div class="gallery">
         <div class="container">
-                <img src="./images/img1.jpeg" alt="" width="600" height="400">
+                <img src="./images/img6.jpeg" alt="" width="600" height="400">
         </div>
 
         <div class="container">
-                <img src="./images/img5.jpeg" alt="" width="600" height="400">
+                <img src="./images/img7.jpeg" alt="" width="600" height="400">
         </div>
 
         <div class="container">
-                <img src="./images/img3.jpeg" alt="" width="600" height="400">
+                <img src="./images/img8.jpeg" alt="" width="600" height="400">
         </div>
-
         <div class="container">
-                <img src="./images/img4.jpeg" alt="" width="600" height="400">
+                <img src="./images/img10.jpeg" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/img11.jpeg" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/img12.jpeg" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/IMG_5591.JPG" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/IMG_5592.JPG" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/IMG_5600.JPG" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/IMG_5625.JPG" alt="" width="600" height="400">
+        </div>
+        <div class="container">
+                <img src="./images/img9.jpeg" alt="" width="600" height="400">
                 <!--<div class="desc">Add a description of the image here</div>-->
         </div>
     </div>
