--- a/pujas.html
+++ b/pujas.html
@@ -22,12 +22,13 @@
             <!-- (C) MENU ITEMS -->
             <div id="hamitems">
                 <a href="./index.html">HOME</a>
+                <a href="./gallery.html.html">HOME</a>
                 <a href="./history.html">HISTORY</a>
                 <a href="#">PUJAS</a>
                 <a href="./trustees.html">TRUSTEES</a>
                 <a href="./future.html">FUTURE PLANS</a>
-                <a href="./book.html">BOOK A PUJA</a>
-                <a href="#">DONATE</a>
+                <a href="https://forms.gle/7DFkyyEzTKygKr8j9">BOOK A PUJA</a>
+                <a href="https://forms.gle/495EaCKUXH8NDcw56">DONATE</a>
             </div>
         </nav>
     </div>
