--- a/history.html
+++ b/history.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navigation">
         <nav id="hamnav">
-            <span><img src="./images/aiyapan.jpg" alt="" style="height: 64px"> Sri Baala Saastha Ayyappan</img></span>
+        <span><img src="./images/logo.png" alt="" style="height: 64px"> Sri Baala Saastha Ayyappan</img></span>
             <br>
             <!-- (B) THE HAMBURGER -->
             <label for="hamburger">&#9776;</label>
@@ -22,17 +22,22 @@
             <!-- (C) MENU ITEMS -->
             <div id="hamitems">
                 <a href="./index.html">HOME</a>
-                <a href="./gallery.html.html">HOME</a>
+                <a href="./gallery.html">GALLERY</a>
                 <a href="./history.html">HISTORY</a>
                 <a href="./pujas.html">PUJAS</a>
                 <a href="./trustees.html">TRUSTEES</a>
                 <a href="./future.html">FUTURE PLANS</a>
-                <a href="https://forms.gle/7DFkyyEzTKygKr8j9">BOOK A PUJA</a>
+                <a href="https://forms.gle/7DFkyyEzTKygKr8j9">DONATE UPI</a>
                 <a href="https://forms.gle/495EaCKUXH8NDcw56">DONATE</a>
             </div>
         </nav>
     </div>
 
+    <div class="gallery">
+        <div class="container">
+            <img src="./images/img8.jpeg" alt="" width="600" height="400">
+        </div>
+    </div>
     <div class="body">
         <p>
         <h1>History of the temple</h1>
@@ -71,11 +76,11 @@
                     <div class="footer-col">
                         <h4>REGISTERED ADDRESS</h4>
                         <p>
-                            RAJI, 3B1, 3rd Floor, 
+                            RAJI, 3B1, 3rd Floor,
                             <br>
-                            Gaiety Palace, 
+                            Gaiety Palace,
                             <br>
-                            1L Blackers Road, 
+                            1L Blackers Road,
                             <br>
                             Mount Road Chennai-600001
                         </p>
@@ -97,4 +102,3 @@
 </body>
 
 </html>
-
