--- a/trustees.html
+++ b/trustees.html
@@ -13,7 +13,7 @@
 <body>
     <div class="navigation">
         <nav id="hamnav">
-            <span><img src="./images/aiyapan.jpg" alt="" style="height: 64px"> Sri Baala Saastha Ayyappan</img></span>
+        <span><img src="./images/logo.png" alt="" style="height: 64px"> Sri Baala Saastha Ayyappan</img></span>
             <br>
             <!-- (B) THE HAMBURGER -->
             <label for="hamburger">&#9776;</label>
@@ -22,12 +22,12 @@
             <!-- (C) MENU ITEMS -->
             <div id="hamitems">
                 <a href="./index.html">HOME</a>
-                <a href="./gallery.html.html">HOME</a>
+                <a href="./gallery.html">GALLERY</a>
                 <a href="./history.html">HISTORY</a>
                 <a href="./pujas.html">PUJAS</a>
                 <a href="./trustees.html">TRUSTEES</a>
                 <a href="./future.html">FUTURE PLANS</a>
-                <a href="https://forms.gle/7DFkyyEzTKygKr8j9">BOOK A PUJA</a>
+                <a href="https://forms.gle/7DFkyyEzTKygKr8j9">DONATE UPI</a>
                 <a href="https://forms.gle/495EaCKUXH8NDcw56">DONATE</a>
             </div>
         </nav>
