--- a/future.html
+++ b/future.html
@@ -36,18 +36,25 @@
     <div class="body" style="min-height: 80vh; padding-top: 8%">
 
         <h2>FUTURE PLANS</h2>
+        <br>
+        <br>
         <ul>
             <li>Phase 1-Immediate requirement before Kumbabishekam
                 <ol>
-                    <li>Two rooms –One room for Melsanthi stay and one room towards Store room to keep temple items
+                    <li>Two rooms – One room for Melsanthi stay and one room towards Store room to keep temple items
                         safely </li>
-                    <li>1 Office room with attached toiletToilet construction for Devotees with septic tank - Outside
+                    <li>1 Office room with attached toilet construction for Devotees with septic tank - Outside
                         the temple</li>
                     <li>Kumbabhishekam Expenses along with Annadhanam</li>
                 </ol>
             </li>
-            AFTER KUMBABHISHEGAM-
+            <br>
+
+            <h2>AFTER KUMBABHISHEGAM</h2>
+            <br>
+            <br>
             <li>Phase 2- Compound Wall and Outer elevation with GATES and outer area Landscaping</li>
+            <br>
             <li>Phase 3- Parivaara Deivangal Sannadhis, Bali peedams and Kumbabhishegam-
                 <ul>
                     <li>a) Saptha Maathar </li>
@@ -57,12 +64,18 @@
                     <li>e) Karuppayi amman</li>
                 </ul>
             </li>
+            <br>
             <li>Phase 4- Kodimaram and other related Pujai.</li>
+            <br>
             <li>Phase 5- Granite Flooring inside temple </li>
+            <br>
             <li>Phase 6-Irumudi Mandapam with Annadhanam Hall and shops construction for rental income to temple.</li>
+            <br>
         </ul>
+        <strong>
         Request all the devotees to donate generously for the above works. Please contact temple office (or) below
         mentioned telephone numbers- 9884068292/ 9884076590/ 9884655547 for donation.
+        </strong>
     </div>
 
 
